--- a/Dev/sass/style.scss
+++ b/Dev/sass/style.scss
@@ -6,14 +6,14 @@
 @import './Dev/sass/baseUtilities/_variables.scss';
 
 /* Importing Bulma Overwrites FIles */ 
-// @import './Dev/sass/bulmaOverwrites/_customBulma.scss'; 
+@import './Dev/sass/bulmaOverwrites/_CustomBulma.scss'; 
 
 /* Importing All Base Utilities */
 @import './Dev/sass/baseUtilities/_mixins.scss';
 @import './Dev/sass/baseUtilities/_placeholders.scss';  
  
 /* Importing Layout FIles */
-// @import './Dev/sass/pages/_global.scss';
-@import './Dev/sass/pages/_index.scss';
-@import './Dev/sass/pages/_oldDevvit.scss';
-          
+// @import './Dev/sass/pages/global.scss';
+// @import './Dev/sass/pages/index.scss';
+           
+
