--- a/Dev/sass/pages/_global.scss
+++ b/Dev/sass/pages/_global.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat|Roboto");
+// @import url('https://fonts.googleapis.com/css?family=Nunito'); 
+// font-family: 'Nunito', sans-serif;
+
 html {
   font-size : 16px;
 }
@@ -9,8 +12,6 @@ body {
 
   margin : 0;
   padding : 0;
-
-  background-color : $body-Bg;
 
 @extend %useBodyFont;
 }
