--- a/Dev/sass/style.scss
+++ b/Dev/sass/style.scss
@@ -5,10 +5,28 @@
 
 
 @import './Dev/sass/baseUtilities/_placeholders.scss';  
+@import './Dev/sass/_global.scss';
  
-/* Importing Layout FIles */
-@import './Dev/sass/pages/_global.scss';
-@import './Dev/sass/pages/_index.scss';
+
+
+
+
+
+
+    /*  Parent Overlay  */
+@import './Dev/sass/_gridOverlay.scss';
+
+    /*   Sections   */
+@import './Dev/sass/subSections/_landing.scss';
+@import './Dev/sass/subSections/_purpose.scss';
+@import './Dev/sass/subSections/_getInvolved-Discord.scss';
+@import './Dev/sass/subSections/_projects.scss';
+
+
+
+
+
+// @import './Dev/sass/pages/_index.scss';
            
 
  
