--- a/Dev/css/style.css
+++ b/Dev/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat|Roboto");
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 body {
   font-family: 'Roboto', sans-serif; }
 
@@ -25,6 +26,19 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center; }
+
+body::-webkit-scrollbar-track {
+  background-color: transparent; }
+
+body::-webkit-scrollbar {
+  width: 4px;
+  background-color: #3e3f3a; }
+
+body::-webkit-scrollbar-thumb {
+  background-color: #c9c8b8; }
+
+.brand {
+  font-family: 'Nunito', sans-serif; }
 
 html {
   font-size: 16px; }
@@ -102,7 +116,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  filter: grayscale(1); }
 
 .purpose {
   text-align: center;
@@ -110,3 +125,40 @@ body {
   max-width: 60%; }
   .purpose .checkTest {
     display: flex; }
+
+.discord {
+  display: grid;
+  background-image: url(../img/Discord-Logo+Wordmark-Color.svg);
+  filter: grayscale(1);
+  grid-template-areas: " . .. ..                                   . widget widget ." " . btn btn                                 . widget widget ." " . .. ..                                   . widget widget .";
+  grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr [col-6] 1fr [col-7] 1fr;
+  grid-template-rows: 1fr 1fr 1fr; }
+  .discord a.btn {
+    padding: 1rem;
+    text-align: center;
+    border: 0;
+    background-color: silver;
+    grid-area: btn;
+    box-shadow: 0px 4px 3px 2px rgba(0, 0, 0, 0.2); }
+    .discord a.btn:hover {
+      background-color: teal; }
+  .discord .widget {
+    overflow-y: scroll;
+    max-height: -webkit-fill-available;
+    grid-area: widget; }
+
+.widget::-webkit-scrollbar-track {
+  background-color: transparent; }
+
+.widget::-webkit-scrollbar {
+  width: 4px;
+  background-color: #3e3f3a; }
+
+.widget::-webkit-scrollbar-thumb {
+  background-color: #c9c8b8; }
+
+.projects {
+  display: grid;
+  grid-template-areas: " landing landing landing                 landing landing landing " " purpose purpose purpose                 purpose purpose purpose " " getInvolved getInvolved getInvolved     discord discord discord " " projects projects projects              projects projects projects ";
+  grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr;
+  grid-template-rows: repeat(1fr); }
