--- a/Dev/sass/style.scss
+++ b/Dev/sass/style.scss
@@ -6,6 +6,7 @@
 
 @import './Dev/sass/baseUtilities/_placeholders.scss';  
 @import './Dev/sass/_global.scss';
+@import './Dev/sass/_checkTest.scss';
  
 
 
@@ -21,6 +22,7 @@
 @import './Dev/sass/subSections/_purpose.scss';
 @import './Dev/sass/subSections/_getInvolved-Discord.scss';
 @import './Dev/sass/subSections/_projects.scss';
+@import './Dev/sass/subSections/_getoutoftheway.scss';
 
 
 
