--- a/Dev/css/style.css
+++ b/Dev/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Roboto', sans-serif; }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Nunito', sans-serif; }
 
 span,
 input,
@@ -26,6 +26,22 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center; }
+
+.item1, .item2, .item3, .item4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 25vh;
+  min-width: 40%;
+  margin: 4% 4%;
+  border-radius: 5px;
+  box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.2); }
+  .item1 h2, .item2 h2, .item3 h2, .item4 h2 {
+    margin-bottom: 1rem; }
+  .item1 p, .item2 p, .item3 p, .item4 p {
+    margin-bottom: 1rem;
+    display: block; }
 
 body::-webkit-scrollbar-track {
   background-color: transparent; }
@@ -51,11 +67,8 @@ body {
   padding: 0; }
 
 a {
-  color: #1fa635;
   transition: 0.5s all;
   text-decoration: none; }
-  a:hover {
-    color: #27d15f; }
 
 li {
   list-style: none;
@@ -78,37 +91,27 @@ h5 {
 
 /*  Parent Overlay  */
 body {
-  background-color: #d2d5d4; }
+  overflow-x: hidden; }
 
 .gridContainer {
   display: grid;
-  grid-template-areas: " landing landing landing                 landing landing landing " " purpose purpose purpose                 purpose purpose purpose " " getInvolved getInvolved getInvolved     discord discord discord " " projects projects projects              projects projects projects ";
+  grid-template-areas: " landing landing landing                 landing landing landing " " purpose purpose purpose                 purpose purpose purpose " " getInvolved getInvolved getInvolved     getInvolved discord discord " " projects projects projects              projects projects projects ";
   grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr [col-6] 1fr;
   grid-template-rows: 100vh 70vh 70vh 70vh; }
 
 .landing {
-  color: #393c3b;
-  background-color: #d2d5d4;
   grid-area: landing; }
 
 .purpose {
-  color: #393c3b;
-  background-color: #d2d5d4;
   grid-area: purpose; }
 
 .getInvolved {
-  color: #393c3b;
-  background-color: #c5c9c7;
   grid-area: getInvolved; }
 
 .discord {
-  color: #393c3b;
-  background-color: #dfe1e1;
   grid-area: discord; }
 
 .projects {
-  color: #393c3b;
-  background-color: #d2d5d4;
   grid-area: projects; }
 
 /*   Sections   */
@@ -116,22 +119,24 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  filter: grayscale(1); }
+  align-items: center; }
 
 .purpose {
-  text-align: center;
+  max-width: 60%;
   margin: 0 auto;
-  max-width: 60%; }
-  .purpose .checkTest {
-    display: flex; }
+  text-align: center; }
+  .purpose div {
+    margin-top: 3rem; }
+  .purpose h1 {
+    margin-bottom: 2rem; }
+  .purpose div {
+    font-size: 20px; }
 
 .discord {
   display: grid;
   background-image: url(../img/Discord-Logo+Wordmark-Color.svg);
-  filter: grayscale(1);
-  grid-template-areas: " . .. ..                                   . widget widget ." " . btn btn                                 . widget widget ." " . .. ..                                   . widget widget .";
-  grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr [col-6] 1fr [col-7] 1fr;
+  grid-template-areas: ". . btn btn btn ." ". . widget widget widget .  " ". . . . . .  ";
+  grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr [col-6] 1fr;
   grid-template-rows: 1fr 1fr 1fr; }
   .discord a.btn {
     padding: 1rem;
@@ -144,8 +149,10 @@ body {
       background-color: teal; }
   .discord .widget {
     overflow-y: scroll;
-    max-height: -webkit-fill-available;
+    position: relative;
     grid-area: widget; }
+    .discord .widget .container {
+      max-height: 20rem; }
 
 .widget::-webkit-scrollbar-track {
   background-color: transparent; }
@@ -157,8 +164,19 @@ body {
 .widget::-webkit-scrollbar-thumb {
   background-color: #c9c8b8; }
 
-.projects {
-  display: grid;
-  grid-template-areas: " landing landing landing                 landing landing landing " " purpose purpose purpose                 purpose purpose purpose " " getInvolved getInvolved getInvolved     discord discord discord " " projects projects projects              projects projects projects ";
-  grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr;
-  grid-template-rows: repeat(1fr); }
+.projectsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%; }
+
+.item1 {
+  background: linear-gradient(15deg, #64e1b5, #9cd8dc); }
+
+.item2 {
+  background: linear-gradient(15deg, #e5768a, #e2b9ac); }
+
+.item3 {
+  background: linear-gradient(15deg, #03c588, #1dcade); }
+
+.item4 {
+  background: linear-gradient(15deg, #74a890, #a5aaaa); }
