--- a/Dev/sass/subSections/_purpose.scss
+++ b/Dev/sass/subSections/_purpose.scss
@@ -1,13 +1,17 @@
- .purpose{
+ .purpose {
+  max-width : 60%;
+  margin : 0 auto;
 
-text-align:center;
-margin:0 auto;
-max-width: 60%;
+  text-align : center;
+  div{
+    margin-top:3rem;
+  }
 
+  h1 {
+    margin-bottom : 2rem;
+  }
 
-.checkTest{
-  display:flex;
-  
+  div {
+    font-size : 20px;
+  }
 }
-
- }  
