--- a/Dev/sass/baseUtilities/_variables.scss
+++ b/Dev/sass/baseUtilities/_variables.scss
@@ -1,11 +1,16 @@
-// Backgrounds
-$body-Bg: #eee;
-$container-Bg: #fff;
-
 // Fonts
 $body-Font: #333;
-$base-Accent: rgb(39, 209, 67);
-// $base:
 
-$font-Headline:'Montserrat', sans-serif;
-$font-Body:'Roboto', sans-serif
+
+// $base:
+$font-Headline:'Nunito', sans-serif;
+$font-Body:'Roboto', sans-serif;
+
+//Logo Bright Colors
+$logoBG: rgb(1, 255, 48);
+$logoBR: rgb(255, 1, 114);
+
+// Logo Dark Colors
+$logoDG:rgb(29, 175, 57);
+$logoDR: rgb(163, 17, 83);
+
