--- a/Dev/sass/style.scss
+++ b/Dev/sass/style.scss
@@ -20,9 +20,10 @@
     /*   Sections   */
 @import './Dev/sass/subSections/_landing.scss';
 @import './Dev/sass/subSections/_purpose.scss';
-@import './Dev/sass/subSections/_getInvolved-Discord.scss';
+@import './Dev/sass/subSections/_discord.scss';
+@import './Dev/sass/subSections/_getInvolved.scss';
 @import './Dev/sass/subSections/_projects.scss';
-@import './Dev/sass/subSections/_getoutoftheway.scss';
+// @import './Dev/sass/subSections/_getoutoftheway.scss';
 
 
 
