--- a/Dev/css/style.css
+++ b/Dev/css/style.css
@@ -121,6 +121,9 @@ body {
   justify-content: center;
   align-items: center; }
 
+.subhead {
+  font-size: 18px; }
+
 .purpose {
   max-width: 60%;
   margin: 0 auto;
@@ -132,24 +135,31 @@ body {
   .purpose div {
     font-size: 20px; }
 
+.discord-widget {
+  border-color: #1daf39 !important; }
+
 .discord {
   display: grid;
-  background-image: url(../img/Discord-Logo+Wordmark-Color.svg);
   grid-template-areas: ". . btn btn btn ." ". . widget widget widget .  " ". . . . . .  ";
   grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr [col-6] 1fr;
   grid-template-rows: 1fr 1fr 1fr; }
   .discord a.btn {
+    color: #333;
     padding: 1rem;
+    -webkit-transition: background-image 0.2s ease-in-out;
+    transition: background-image 0.2s ease-in-out;
     text-align: center;
     border: 0;
-    background-color: silver;
+    border-radius: 4px;
+    background-image: linear-gradient(15deg, #1daf39, #01ff30);
     grid-area: btn;
     box-shadow: 0px 4px 3px 2px rgba(0, 0, 0, 0.2); }
     .discord a.btn:hover {
-      background-color: teal; }
+      background-image: linear-gradient(15deg, #a31153, #ff0172);
+      color: white; }
   .discord .widget {
-    overflow-y: scroll;
     position: relative;
+    overflow-y: scroll;
     grid-area: widget; }
     .discord .widget .container {
       max-height: 20rem; }
@@ -163,6 +173,38 @@ body {
 
 .widget::-webkit-scrollbar-thumb {
   background-color: #c9c8b8; }
+
+.getInvolved {
+  display: grid;
+  grid-template-areas: ". one one . . . ." ". . . . two two ." ". three three . . . ." ". . . . four four ." ". five five . . . ." ". . . six six . .";
+  grid-template-columns: [col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr [col-6] 1fr [col-7] 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 3fr; }
+
+.one {
+  grid-area: one;
+  font-size: 1.2rem; }
+
+.two {
+  grid-area: two;
+  font-size: 1.2rem; }
+
+.three {
+  grid-area: three;
+  font-size: 1.2rem; }
+
+.four {
+  grid-area: four;
+  font-size: 1.2rem; }
+
+.five {
+  grid-area: five;
+  font-size: 1.2rem; }
+
+.six {
+  grid-area: six; }
+
+.projects {
+  margin-top: 5rem; }
 
 .projectsContainer {
   display: flex;
