--- a/Dev/sass/baseUtilities/_placeholders.scss
+++ b/Dev/sass/baseUtilities/_placeholders.scss
@@ -6,33 +6,22 @@
   font-family:'Nunito', sans-serif;
   }
 
-%container {
-  max-width : 50em;
-  margin : 0 auto;
-
-  background-color : $container-Bg;
-  div,
-  p {
-    padding : 4em;
-  
-    transition : all 0.5s;
-    &:hover {
-      @include offsetShadow(3px,2px,3px,2px);
-    }
-  }
-}
 %outsideMargin {
   width : 80%;
   max-width : 80%;
   margin : 0 auto;
 
-  background-color : $container-Bg;
 }
 %zeroMargin {
   margin : 0;
 }
 
-
+%cbLabel{
+  transition:.7s all ease-in;
+  padding:1rem;
+  border:2px solid transparent;
+  border-radius:3rem;
+}
 %section{
   
   display:flex;
@@ -41,6 +30,7 @@
   align-items:center;
 
 }
+
 %projectPlaceHolder{
   display:flex;
   flex-direction:column;
